prevent long links scrolling horz; left-align multipart menu

--- a/web/wp-content/themes/lfevents/src/assets/scss/modules/_content.scss
+++ b/web/wp-content/themes/lfevents/src/assets/scss/modules/_content.scss
@@ -2,6 +2,12 @@
   background-color: $white;
   position: relative;
   z-index: 1;
+
+  a[href] {
+    overflow-wrap: break-word;
+    display: inline-block;
+    max-width: 100%;
+  }
 }
 
 .main-grid {
