--- a/web/wp-content/themes/lfevents/src/assets/scss/modules/_multi-part-page.scss
+++ b/web/wp-content/themes/lfevents/src/assets/scss/modules/_multi-part-page.scss
@@ -44,7 +44,7 @@
     }
 
     li {
-      margin-top: rem-calc(10);
+      margin-top: rem-calc(20);
       line-height: 1.3;
 
       @include breakpoint(large) {
